8324580: SIGFPE on THP initialization on kernels < 4.10

Reviewed-by: stuefe, sjohanss